--- a/MapBlender/MapBlender/Info.plist
+++ b/MapBlender/MapBlender/Info.plist
@@ -4,6 +4,11 @@
 <dict>
 	<key></key>
 	<string></string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
